@@ -80,6 +80,8 @@
       - :saveas now provides completions for default file names, and
         automatically chooses a filename when the save target is a
         directory.
+      - :sidebar now accepts a ! flag to toggle the sidebar rather
+        than open it unconditionally.
       - Added :write !cmd and :write >>file.
       - Added :yank command.
       - :delmarks, :marks and :qmarks now also accept ranges, same as
